--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.22",
     "@xyflow/react": "^12.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
